syntax = "proto3";

option csharp_namespace = "AspNet5.GoodPracticies.Grpc";

import "google/protobuf/empty.proto";

package user;

service UserRPCService {
  rpc GetUserInfo (UserIdentityModel) returns (UserInfoModel);
  rpc GetManyUsersInfo (GetManyUsersInfoRequest) returns (stream UserInfoModel);
  rpc AddUser (UserInfoModel) returns (google.protobuf.Empty);
  rpc UpdateUser (UserInfoModel) returns (google.protobuf.Empty);
  rpc RemoveUser (UserIdentityModel) returns (google.protobuf.Empty);
}

message UserIdentityModel {
  int32 userId = 1;
}

message GetManyUsersInfoRequest {
  int32 page = 1;
  int32 quantity = 2;
  bool asyncList = 3;
}

message UserInfoModel {
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  uint32 age = 4;
  string userType = 5;
}